--- a/TravelPlanner.Web/ClientApp/app/pages/register/register.page.html
+++ b/TravelPlanner.Web/ClientApp/app/pages/register/register.page.html
@@ -1,12 +1,12 @@
 <h1>Register</h1>
 
-<form>
-    <input type="text" placeholder="Name..." />
-    <input type="text" placeholder="Email..."/>
-    <input type="text" placeholder="Phone..."/>
-    <input type="password" placeholder="Password..."/>
+<form #registerForm="ngForm" (ngSubmit)="onSubmit()"> 
+    <input [(ngModel)]="model.name" name="name" type="text" required placeholder="Name..." />
+    <input [(ngModel)]="model.email" name="email" type="text" required placeholder="Email..."/>
+    <input [(ngModel)]="model.phone" name="phone" type="text" required placeholder="Phone..."/>
+    <input [(ngModel)]="model.password" name="password" type="password" required placeholder="Password..."/>
 
-    <input type="submit" value="Register"/>
+    <input type="submit" value="Register" [disabled]="!registerForm.form.valid"/>
 </form>
 
 Have Account? <a [routerLink]="['/login']">Login</a>
