--- a/TravelPlanner.Web/ClientApp/app/pages/register/register.page.html
+++ b/TravelPlanner.Web/ClientApp/app/pages/register/register.page.html
@@ -1,12 +1,12 @@
-<h1>Register</h1>
+<h1>{{ 'registrPageTitle' | translate }}</h1>
 
 <form #registerForm="ngForm" (ngSubmit)="onSubmit()"> 
-    <input [(ngModel)]="model.userName" name="userName" type="text" required placeholder="Name..." />
-    <input [(ngModel)]="model.email" name="email" type="text" required placeholder="Email..."/>
-    <input [(ngModel)]="model.phone" name="phone" type="text" required placeholder="Phone..."/>
-    <input [(ngModel)]="model.password" name="password" type="password" required placeholder="Password..."/>
+    <input [(ngModel)]="model.userName" name="userName" type="text" required placeholder="{{ 'userNamePlaceholder' | translate }}" />
+    <input [(ngModel)]="model.email" name="email" type="text" required placeholder="{{ 'emailPlaceholder' | translate }}"/>
+    <input [(ngModel)]="model.phone" name="phone" type="text" required placeholder="{{ 'phonePlaceholder' | translate }}"/>
+    <input [(ngModel)]="model.password" name="password" type="password" required placeholder="{{ 'passwordPlaceholder' | translate }}"/>
 
-    <input type="submit" value="Register" [disabled]="!registerForm.form.valid"/>
+    <input type="submit" value="{{ 'registrPageTitle' | translate }}" [disabled]="!registerForm.form.valid"/>
 </form>
 
-Have Account? <a [routerLink]="['/login']">Login</a>
+{{ 'haveAccount' | translate }} <a [routerLink]="['/login']">{{ 'loginPageTitle' | translate }}</a>
