working on adding map to the business logic, todo: rename to trip-map, add to create trip, show map

--- a/TravelPlanner.Web/ClientApp/app/pages/newtrip/newtrip.page.html
+++ b/TravelPlanner.Web/ClientApp/app/pages/newtrip/newtrip.page.html
@@ -5,6 +5,8 @@
     <input name="map" localize="tripMapPlaceholder" [(ngModel)]="model.mapUrl" />
     <textarea name="description" localize="tripDescriptionPlaceholder" [(ngModel)]="model.description"></textarea>
     
+    <map></map>
+    
     <button [disabled]="!newTripForm.form.valid" localize="createButton"></button>
 </form>
 
