--- a/TravelPlanner.Web/ClientApp/app/pages/trip/trip.page.html
+++ b/TravelPlanner.Web/ClientApp/app/pages/trip/trip.page.html
@@ -27,3 +27,9 @@ Users
 </div>
 
 <chat></chat>
+
+Distance
+<div>{{ trip.tripRoute.distance }}</div>
+
+MAP
+<map waypoints="trip.tripRoute.tripWaypoints"></map>
