--- a/TravelPlanner.Web/ClientApp/app/pages/trip/trip.page.html
+++ b/TravelPlanner.Web/ClientApp/app/pages/trip/trip.page.html
@@ -28,8 +28,8 @@ Users
 
 <chat></chat>
 
-Distance
-<div>{{ trip.tripRoute.distance }}</div>
+<!--Distance
+<div>{{ trip.tripRoute.distance }}</div>-->
 
-MAP
-<map waypoints="trip.tripRoute.tripWaypoints"></map>
+<!--MAP
+<map waypoints="trip.tripRoute.tripWaypoints"></map>-->
