--- a/TravelPlanner.Web/ClientApp/app/pages/login/login.page.html
+++ b/TravelPlanner.Web/ClientApp/app/pages/login/login.page.html
@@ -1,10 +1,26 @@
-<h1>{{ 'loginPageTitle' | translate }}</h1>
+<div class="page-header">
+    <h1 localize="loginPageTitle"></h1>
+</div>
 
-<form #loginForm="ngForm" (ngSubmit)="onSubmit()">
-    <input required id="email" name="email" [(ngModel)]="model.email" type="text" placeholder="{{ 'emailPlaceholder' | translate }}"/>
-    <input required id="password" name="password" [(ngModel)]="model.password" type="password" placeholder="{{ 'passwordPlaceholder' | translate }}" />
+<form class="form-horizontal" #loginForm="ngForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+        <div class="col-lg-6">
+            <input class="form-control" required id="email" name="email" [(ngModel)]="model.email" type="text" localize="emailPlaceholder"/>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-lg-6">
+            <input class="form-control" required id="password" name="password" [(ngModel)]="model.password" type="password" localize="passwordPlaceholder" />
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-lg-12">
+            <input class="btn btn-primary" type="submit" localize="loginPageTitle" [disabled]="!loginForm.form.valid" />
+        </div>
+    </div>
     
-    <input type="submit" value="{{ 'loginPageTitle' | translate }}" [disabled]="!loginForm.form.valid"/>
+    <label class="control-label">
+        {{ 'dontHaveAccount' | translate }} <a [routerLink]="['/register']" localize="registerPageTitle"></a>
+    </label>
 </form>
 
-{{ 'dontHaveAccount' | translate }} <a [routerLink]="['/register']">{{ 'registrPageTitle' | translate }}</a>
