done with child routes

--- a/TravelPlanner.Web/ClientApp/app/pages/trip/trip.page.html
+++ b/TravelPlanner.Web/ClientApp/app/pages/trip/trip.page.html
@@ -6,23 +6,14 @@
 <div class="row">
     <div class="col-md-12">
         <ul class="nav nav-tabs">
-            <li class="active"><a href="#participants" localize="tripParticipantsTabTitle"></a></li>
-            <li><a href="#chat" localize="tripChatTabTitle"></a></li>
-            <li><a href="#map" localize="tripMapTabTitle"></a></li>
+            <li [routerLinkActive]="['active']"><a [routerLink]="['participants']" localize="tripParticipantsTabTitle"></a></li>
+            <li [routerLinkActive]="['active']"><a [routerLink]="['chat']" localize="tripChatTabTitle"></a></li>
+            <li [routerLinkActive]="['active']"><a [routerLink]="['map']" localize="tripMapTabTitle"></a></li>
         </ul>
 
         <div class="tab-content">
-            <div id="participants" class="tab-pane fade active in">
-                <chat></chat>
-                <!--<trip-participants></trip-participants>-->
-            </div>
-
-            <div id="chat" class="tab-pane fade">
-                <chat></chat>
-            </div>
-
-            <div id="map" class="tab-pane fade">
-                <!--<map [isReadOnlyMode]="!isRouteEditMode"></map>-->
+            <div class="tab-pane fade active in">
+                <router-outlet></router-outlet>
             </div>
         </div>
     </div>
