--- a/TravelPlanner.Web/ClientApp/app/pages/newtrip/newtrip.page.html
+++ b/TravelPlanner.Web/ClientApp/app/pages/newtrip/newtrip.page.html
@@ -1,6 +1,6 @@
 <div class="row page-header">
     <div class="col-md-11">
-        <h1 localize="myTripsPageTitle"></h1>
+        <h1 localize="newTripPageTitle"></h1>
     </div>
     <div style="padding-top: 14px" class="col-md-1">
         <button class="btn btn-primary" [disabled]="!newTripForm.form.valid" localize="createButton" (click)="onSubmit()"></button>
