--- a/TravelPlanner.Web/ClientApp/app/pages/newtrip/newtrip.page.html
+++ b/TravelPlanner.Web/ClientApp/app/pages/newtrip/newtrip.page.html
@@ -2,9 +2,6 @@
     <div class="col-md-11">
         <h1 localize="newTripPageTitle"></h1>
     </div>
-    <div style="padding-top: 14px" class="col-md-1">
-        <button class="btn btn-primary" [disabled]="!newTripForm.form.valid" localize="createButton" (click)="onSubmit()"></button>
-    </div>
 </div>
 
 <div class="row">
@@ -16,9 +13,10 @@
             <div class="form-group">
                 <textarea class="form-control" name="description" localize="tripDescriptionPlaceholder" [(ngModel)]="newtrip.description"></textarea>
             </div>
+            <div class="form-group">
+                <button class="btn btn-primary" [disabled]="!newTripForm.form.valid" localize="createButton" (click)="createTrip()"></button>
+            </div>
         </form>
     </div>
 </div>
-
-<map></map>
 
